change location to locatie for nl

--- a/locatie.html
+++ b/locatie.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Kosten</title>
+    <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -26,7 +27,7 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="locatie">Locatie</a>
+          <a class="menu-item link" href="location">Locatie</a>
           <a class="menu-item link" href="contact">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
@@ -43,69 +44,23 @@
 
     <div class="page-wrapper">
 
-      <div class="banner">
-        <div class="banner-wrapper">
-          <!-- <div class="headings">
-            <h2>Hoe werkt</h2>
-            <div class="seven-wrapper">
-              <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
-            </div>
-          </div> -->
-          <div class="image">
-            <img alt="7vs7-banner" src="7vs7-price.jpg">
-          </div>
-        </div>
-      </div>
+      <div class="spacer-sm"></div>
 
-      <div class="info-wrapper">
-        <div class="row-no-color row">
-          <div class="versus-info">
-            <h2 class="list-title">Wat zijn de prijzen?</h2>
-            <h3 class="intro">
-              Voor de berekening van de prijzen is het uitgangspunt dat een team bestaat uit gemiddeld 11 personen en 11 wedstrijden per seizoen speelt (voor een competitie van 12 teams).
-              Vanuit de organisatie raden wij aan om teams samen te stellen van 10 tot 12 spelers. Hierbij geldt hoe meer spelers hoe beter.
-              Houd rekening met afmeldingen en blessures waardoor mensen niet mee kunnen doen. Bovendien is het fijn om wissels te houden tijdens een wedstrijd.
-            </h3>
-          </div>
-        </div>
-        <div class="row-no-color row">
-          <div class="price-table">
-            <div class="table-row">
-              <div class="cell col-1"></div>
-              <div class="cell col-2">Prijs</div>
-            </div>
-            <div class="table-row">
-              <div class="cell col-1">Per team per seizoen</div>
-              <div class="cell col-2">€999,99</div>
-            </div>
-            <div class="table-row">
-              <div class="cell col-1">Per persoon per seizoen (uitgaande van 11 spelers per team)</div>
-              <div class="cell col-2">€90,90</div>
-            </div>
-            <div class="table-row">
-              <div class="cell col-1">Per persoon per wedstrijd</div>
-              <div class="cell col-2">€8,30</div>
-            </div>
-          </div>
-        </div>
-        <div class="spacer-sm"></div>
-        <div class="row">
-
-        </div>
-        <div class="spacer-sm"></div>
-        <div class="row second">
-
+      <div class="location-og">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2433.0514154139887!2d4.647373015572463!3d52.42386607979607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5efedce25ec55%3A0xf1d3fa85c2b9ad30!2sVan%20der%20Aartweg%2016%2C%202026%20ZL%20Haarlem!5e0!3m2!1sen!2snl!4v1680357072714!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="location-info">
+          <h3>Adres</h3>
+          <p>Van der Aartweg 16, 2026 ZL Haarlem</p>
         </div>
       </div>
 
     </div>
-
     <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="locatie">Locatie</a>
+          <a class="menu-item link" href="location">Locatie</a>
           <a class="menu-item link" href="contact">Contact</a>
           <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
