--- a/regels.html
+++ b/regels.html
@@ -28,7 +28,7 @@
           </a>
         </div>
         <div class="nav-menu">
-          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="locatie">Locatie</a>
           <a class="menu-item link" href="contact">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
@@ -131,7 +131,7 @@
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="locatie">Locatie</a>
           <a class="menu-item link" href="contact">Contact</a>
           <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
