Add exl btw and fix icons for en

--- a/aanmelden.html
+++ b/aanmelden.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="form-input">
                         <label for="email" class="label">Emailadres (Verplicht)</label>
-                        <input id="email" name="email" class="input email-address" placeholder="Emailadres" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Voer een geldig e-mailadres in">
+                        <input id="email" name="email" class="input email-address" placeholder="Emailadres" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Voer een geldig e-mailadres in. Karakters moeten in kleine letters">
                     </div>
                     <div class="radio-label">
                         Wil je je inschrijven als team of als individu?
