--- a/en/costs.html
+++ b/en/costs.html
@@ -4,7 +4,7 @@
   <head>
     <title>Kosten</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
@@ -78,7 +78,7 @@
             </div>
             <div class="table-row">
               <div class="cell col-1">Per team per season</div>
-              <div class="cell col-2">€999,99</div>
+              <div class="cell col-2">€999,-</div>
             </div>
             <div class="table-row">
               <div class="cell col-1">Per person per season (Based on 11 players per team)</div>
@@ -90,6 +90,7 @@
             </div>
           </div>
         </div>
+        <div class="price-exc">*Prices excl. btw</div>
         <div class="spacer-sm"></div>
         <div class="row">
 
