--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -4,7 +4,7 @@
 <head>
     <title>7vs7 Form</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8"/>
-    <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap"
@@ -70,7 +70,7 @@
                     </div>
                     <div class="form-input">
                         <label for="email" class="label">Emailaddress (Required)</label>
-                        <input id="email" name="email" class="input email-address" placeholder="Emailadres" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="This is not a valid email-address">
+                        <input id="email" name="email" class="input email-address" placeholder="Emailadres" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="This is not a valid email-address. Characters must be lowercase">
                     </div>
                     <div class="radio-label">
                         Do you want to register as a team or as an individual?
