--- a/kosten.html
+++ b/kosten.html
@@ -76,7 +76,7 @@
             </div>
             <div class="table-row">
               <div class="cell col-1">Per team per seizoen</div>
-              <div class="cell col-2">€999,99</div>
+              <div class="cell col-2">€999,-</div>
             </div>
             <div class="table-row">
               <div class="cell col-1">Per persoon per seizoen (uitgaande van 11 spelers per team)</div>
@@ -88,6 +88,7 @@
             </div>
           </div>
         </div>
+        <div class="price-exc">*Prijzen zijn excl. btw</div>
         <div class="spacer-sm"></div>
         <div class="row">
 
