Add new images and thanks-page

--- a/aanmelden.html
+++ b/aanmelden.html
@@ -55,7 +55,7 @@
                 <h2>De haarlemse voetbalcompetitie!</h2>
             </div>
             <div class="form-container">
-                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form">
+                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form" onsubmit="naarBedankt()">
                     <div class="form-input">
                         <label for="voornaam" class="label">Voornaam (Verplicht)</label>
                         <input id="voornaam" name="voornaam" class="input first-name" placeholder="Voornaam" required>
@@ -120,7 +120,7 @@
                 </form>
             </div>
             <div class="image">
-                <img alt="7vs7-banner" src="7vs7-banner.jpg">
+                <img alt="7vs7-banner" src="schrijf-je-in.png">
             </div>
         </div>
     </div>
