--- a/en/for-who.html
+++ b/en/for-who.html
@@ -53,7 +53,7 @@
             </div>
           </div>
           <div class="image">
-            <img alt="7vs7-banner" src="../7vs7-image-goal.jpg">
+            <img alt="7vs7-banner" src="../voor-wie.png">
           </div>
         </div>
       </div>
