--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -54,7 +54,7 @@
             </div>
           </div> -->
           <div class="image">
-            <img alt="7vs7-banner" src="../7vs7-how-work.jpg">
+            <img alt="7vs7-banner" src="../hoe-werkt-het.png">
           </div>
         </div>
       </div>
