--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -54,7 +54,7 @@
             </div>
           </div> -->
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-how-work.jpg">
+            <img alt="7vs7-banner" src="hoe-werkt-het.png">
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
         <div class="spacer-sm"></div>
         <div class="row">
           <div class="image">
-            <img src="7vs7-image-2.jpg">
+            <img src="schrijf-je-in.png">
           </div>
           <div class="info">
             <h3>Zelf regelen:</h3>
@@ -87,7 +87,7 @@
         <div class="spacer-sm"></div>
         <div class="row second">
           <div class="image">
-            <img src="img-info.jpg">
+            <img src="regels.png">
           </div>
           <div class="info">
             <h3>Vanuit de organisatie:</h3>
