--- a/kosten.html
+++ b/kosten.html
@@ -52,7 +52,7 @@
             </div>
           </div> -->
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-price.jpg">
+            <img alt="7vs7-banner" src="inschrijfgeld.png">
           </div>
         </div>
       </div>
