--- a/en/rules.html
+++ b/en/rules.html
@@ -91,7 +91,7 @@
         </div>
         <div class="row">
           <div class="image">
-            <img src="../7vs7-image-2.jpg">
+            <img src="../regels.png">
           </div>
           <div class="info">
             <ul class="unordered-list">
@@ -107,7 +107,7 @@
         <div class="spacer-sm"></div>
         <div class="row second">
           <div class="image">
-            <img src="../img-info.jpg">
+            <img src="../schrijf-je-in.png">
           </div>
           <div class="info">
             <ul class="unordered-list">
