--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -55,7 +55,7 @@
                 <h2>The Haarlem Soccer competition!</h2>
             </div>
             <div class="form-container">
-                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form">
+                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form" onsubmit="toThanks()">
                     <div class="form-input">
                         <label for="voornaam" class="label">First Name (Required)</label>
                         <input id="voornaam" name="voornaam" class="input first-name" placeholder="Voornaam" required>
@@ -120,7 +120,7 @@
                 </form>
             </div>
             <div class="image">
-                <img alt="7vs7-banner" src="../7vs7-banner.jpg">
+                <img alt="7vs7-banner" src="../schrijf-je-in.png">
             </div>
         </div>
     </div>
