--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="cards-container">
           <div class="card card-one audience">
             <div class="card-image">
-              <img src="7vs7-image-goal.jpg">
+              <img src="voor-wie.png">
             </div>
             <div class="card-body">
               <h2 class="card-title">Voor wie is het?</h2>
@@ -105,7 +105,7 @@
           </div>
           <div class="card efficacy">
             <div class="card-image">
-              <img src="7vs7-how-work.jpg">
+              <img src="hoe-werkt-het.png">
               <img class="logo-in-card" src="7V7-logo.png">
             </div>
             <div class="card-body">
@@ -119,7 +119,7 @@
           </div>
           <div class="card rules">
             <div class="card-image">
-              <img src="7vs7-rules.jpg">
+              <img src="regels.png">
             </div>
             <div class="card-body">
               <h2 class="card-title">Regels</h2>
@@ -132,7 +132,7 @@
           </div>
           <div class="card costs">
             <div class="card-image">
-              <img src="7vs7-price.jpg">
+              <img src="inschrijfgeld.png">
             </div>
             <div class="card-body">
               <h2 class="card-title">Wat kost het?</h2>
@@ -144,7 +144,7 @@
           </div>
           <div class="card subscribe">
             <div class="card-image">
-              <img src="7vs7-beker-2.jpg">
+              <img src="schrijf-je-in.png">
               <img class="logo-in-card" src="7V7-logo.png">
             </div>
             <div class="card-body">
