--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
     <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <meta property="og:image" content="../7V7-logo.png">
-    <link rel="icon" type="image/png" href="../7V7-logo.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="../7V7-logo-haarlem.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
