--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta property="og:image" content="7V7-logo.png">
+    <meta property="og:image" content="7V7-logo-haarlem.png">
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
