add space for email-to and add rksv onze gezellen

--- a/en/contact.html
+++ b/en/contact.html
@@ -45,7 +45,7 @@
     <div class="page-wrapper">
       <div class="contact-person">
         <div class="contact-person-text">
-          For questions send your mail to <a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a>
+          For questions send your mail to <a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">&nbsp;info@7versus7.nl</a>
         </div>
         <img class="contact-person-image" src="../7V7-logo.png">
       </div>
