--- a/en/how-does-it-work.html
+++ b/en/how-does-it-work.html
@@ -99,7 +99,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Location</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Canteen where drinks can be obtained</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Changing rooms</li>
-              <li class="list-item">It can be that simple! For any questions, please send an email to<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a></li>
+              <li class="list-item">It can be that simple! For any questions, please send an email to<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">&nbsp;info@7versus7.nl</a></li>
             </ul>
           </div>
         </div>
