--- a/hoe-werkt-het.html
+++ b/hoe-werkt-het.html
@@ -99,7 +99,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Locatie</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kantine waar drinken gehaald kan worden</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kleedkamers</li>
-              <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">info@7versus7.nl</a></li>
+              <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar<a class="mail-to" href="mailto:info@7versus7.nl" target="_blank">&nbsp;info@7versus7.nl</a></li>
             </ul>
           </div>
         </div>
