--- a/locatie.html
+++ b/locatie.html
@@ -49,7 +49,7 @@
       <div class="location-og">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2433.0514154139887!2d4.647373015572463!3d52.42386607979607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5efedce25ec55%3A0xf1d3fa85c2b9ad30!2sVan%20der%20Aartweg%2016%2C%202026%20ZL%20Haarlem!5e0!3m2!1sen!2snl!4v1680357072714!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="location-info">
-          <h3>Adres</h3>
+          <h3>RKSV Onze Gezellen</h3>
           <p>Van der Aartweg 16, 2026 ZL Haarlem</p>
         </div>
       </div>
