--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Op deze website vind je informatie over 7 versus 7. Een voetbalcompetitie in haarlem voor de liefhebber van voetbal, voor bedrijven en vriendenteams.">
+    <meta name="keywords" content="website, informatie, 7vs7, 7versus7, voetbal, competitie, bedrijfsteam, vriendenteam, Haarlem">
     <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
