--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="7 versus 7 is een voetbalcompetitie in Haarlem speciaal voor de liefhebber van voetbal, voor bedrijven en vriendenteams.">
-    <meta name="keywords" content="website, informatie, 7vs7, 7versus7, voetbal, competitie, bedrijfsteam, vriendenteam, Haarlem">
+    <meta name="keywords" content="website, informatie, 7vs7, 7versus7, 7 versus 7, voetbal, competitie, bedrijfsteam, vriendenteam, Haarlem">
     <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
