add info for dates on home

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
         <h3>De enige 7 tegen 7 voetbalcompetitie van Haarlem</h3>
       </div>
 
+      <div class="date-info">
+        Iedere vrijdag van 18:00u tot 22:00u zal de competitie worden gespeeld op het terrein van RKSV Onze Gezellen.
+        Elk heel uur zal een wedstrijd beginnen. De laatste wedstrijd begint om 21:00u.
+      </div>
+
       <div class="spacer-sm desktop"></div>
 
       <div class="usps">
