--- a/en/index.html
+++ b/en/index.html
@@ -70,6 +70,11 @@
         <h3>The only 7 versus 7 soccer competition in Haarlem</h3>
       </div>
 
+      <div class="date-info">
+        The competition will be played every Friday from 6:00 pm till 10:00 pm at RKSV Onze Gezellen.
+        A match will start every full hour, and the last match will begin at 9:00 pm.
+      </div>
+
       <div class="spacer-sm desktop"></div>
 
       <div class="usps">
