add socials to footer

--- a/en/rules.html
+++ b/en/rules.html
@@ -130,6 +130,14 @@
     <footer>
       <div class="footer-container">
         <img alt="7vs7" src="../7V7-logo.png">
+        <div class="social-icons">
+          <a class="social-icon" href="https://www.instagram.com/7v7haarlem/">
+            <img alt="instagram" src="../instagram-icon.svg">
+          </a>
+          <a class="social-icon" href="https://www.facebook.com/7v7Haarlem/">
+            <img alt="facebook" src="../facebook-icon.svg">
+          </a>
+        </div>
         <div class="footer-menu-items">
           <a class="menu-item link" href="location">Location</a>
           <a class="menu-item link" href="contact">Contact</a>
