--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -131,17 +131,25 @@
 <div class="spacer-sm"></div>
 <footer>
     <div class="footer-container">
-        <img alt="7vs7" src="../7V7-logo.png">
-        <div class="footer-menu-items">
-          <a class="menu-item link" href="location">Location</a>
-          <a class="menu-item link" href="contact">Contact</a>
-          <a class="menu-item link" href="how-does-it-work">How does it work?</a>
-          <a class="menu-item link" href="for-who">For who is it?</a>
-          <a class="menu-item link" href="rules">Rules</a>
-          <a class="menu-item link" href="costs">What does it cost?</a>
-        </div>
+      <img alt="7vs7" src="../7V7-logo.png">
+      <div class="social-icons">
+        <a class="social-icon" href="https://www.instagram.com/7v7haarlem/">
+          <img alt="instagram" src="../instagram-icon.svg">
+        </a>
+        <a class="social-icon" href="https://www.facebook.com/7v7Haarlem/">
+          <img alt="facebook" src="../facebook-icon.svg">
+        </a>
+      </div>
+      <div class="footer-menu-items">
+        <a class="menu-item link" href="location">Location</a>
+        <a class="menu-item link" href="contact">Contact</a>
+        <a class="menu-item link" href="how-does-it-work">How does it work?</a>
+        <a class="menu-item link" href="for-who">For who is it?</a>
+        <a class="menu-item link" href="rules">Rules</a>
+        <a class="menu-item link" href="costs">What does it cost?</a>
+      </div>
     </div>
-</footer>
+  </footer>
 <script src="../form.js"></script>
 <script src="../menu.js"></script>
 </body>
