--- a/locatie.html
+++ b/locatie.html
@@ -59,8 +59,16 @@
     <footer>
       <div class="footer-container">
         <img alt="7vs7" src="7V7-logo.png">
+        <div class="social-icons">
+          <a class="social-icon" href="https://www.instagram.com/7v7haarlem/">
+            <img alt="instagram" src="instagram-icon.svg">
+          </a>
+          <a class="social-icon" href="https://www.facebook.com/7v7Haarlem/">
+            <img alt="facebook" src="facebook-icon.svg">
+          </a>
+        </div>
         <div class="footer-menu-items">
-          <a class="menu-item link" href="location">Locatie</a>
+          <a class="menu-item link" href="locatie">Locatie</a>
           <a class="menu-item link" href="contact">Contact</a>
           <a class="menu-item link" href="hoe-werkt-het">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie">Voor wie is het?</a>
