--- a/aanmelden.html
+++ b/aanmelden.html
@@ -55,7 +55,7 @@
                 <h2>De haarlemse voetbalcompetitie!</h2>
             </div>
             <div class="form-container">
-                <form action="https://app.7versus7.nl/api/aanmelden" method="POST" class="submit-form" id="versus-form" onsubmit="naarBedankt()">
+                <form class="submit-form" id="versus-form">
                     <div class="form-input">
                         <label for="voornaam" class="label">Voornaam (Verplicht)</label>
                         <input id="voornaam" name="voornaam" class="input first-name" placeholder="Voornaam" required>
@@ -78,7 +78,7 @@
                     <div class="form-input">
                         <div class="radio-button">
                             <input type="radio" id="vriendenteam" name="team_type" value="vriendenteam"
-                                   onchange="showTeam()">
+                                   onchange="showTeam()" checked>
                             <label for="vriendenteam">Vriendenteam</label>
                         </div>
                         <div class="radio-button">
@@ -105,7 +105,7 @@
                             <label for="klasse_hoog">Hoge Klasse</label>
                         </div>
                         <div class="radio-button">
-                            <input type="radio" id="klasse_laag" name="klasse" value="laag">
+                            <input type="radio" id="klasse_laag" name="klasse" value="laag" checked>
                             <label for="klasse_laag">Lage Klasse</label>
                         </div>
                     </div>
