--- a/regels.html
+++ b/regels.html
@@ -111,7 +111,7 @@
           </div>
           <div class="info">
             <ul class="unordered-list">
-              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elk team dient dezelfde kleuren te dragen van de tenues. Elk team mag uiteraard z’n eigen kleuren verzinnen</li>
+              <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Alle spelers van een team dienen een shirt van dezelfde kleur te dragen. Elk team mag uiteraard z’n eigen kleuren verzinnen</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Bij vrije trappen dient er 6 meter afstand te worden genomen</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Alleen de keeper mag een sliding maken voor de bal als het ongevaarlijk is</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>De organisatie mag regels altijd aanpassen om het spel veiliger en leuker te maken voor de spelers. Veiligheid en plezier staat bij ons voorop</li>
