Correct grammar mistake

--- a/regels.html
+++ b/regels.html
@@ -80,7 +80,7 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij een rode kaart word je geschorst voor de aankomende 2 wedstrijden</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Bij 2 rode kaarten word de speler voor de rest van de competitie gediskwalificeerd</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Het belangrijkste voor ons is dat iedereen er plezier aan heeft. Maar uiteraard is het wel competitief</li>
-              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Aan het einde van het seizoen word er een beker uitgereikt voor de nummer 1 van elke competitie</li>
+              <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Aan het einde van het seizoen word er een beker uitgereikt aan de nummer 1 van elke competitie</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Er is geen buitenspel bij 7 Versus 7</li>
             </ul>
           </div>
