Correct grammar mistake

--- a/voor-wie.html
+++ b/voor-wie.html
@@ -83,7 +83,7 @@
           <div class="for-who-text">
             "Ik heb een fulltime job en geen tijd voor selectie voetbal of 2 tot 3 keer per week aanwezig te zijn bij een club.
             Toch vind ik het heerlijk om een wedstrijdje te kunnen spelen.
-            Er zijn weinig mogelijkheden die mij aanbieden om toch nog deel te kunnen nemen aan mijn favoriete sport"
+            Er zijn weinig mogelijkheden om toch nog deel te kunnen nemen aan mijn favoriete sport"
           </div>
         </div>
         <div class="row-for-who">
