Change form and add try-out may 19th

--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -97,16 +97,16 @@
                         <input id="team_naam" name="team_naam" class="input team-name" placeholder="Teamnaam">
                     </div>
                     <div class="radio-label">
-                        Do you want to play in a high or low league?
+                        Do you want to register for the competition or for the try-out?
                     </div>
                     <div class="form-input">
                         <div class="radio-button">
-                            <input type="radio" id="klasse_hoog" name="klasse" value="hoog">
-                            <label for="klasse_hoog">High League</label>
+                            <input type="radio" id="competitie" name="spel_type" value="competitie" checked>
+                            <label for="competitie">Competition</label>
                         </div>
                         <div class="radio-button">
-                            <input type="radio" id="klasse_laag" name="klasse" value="laag" checked>
-                            <label for="klasse_laag">Low League</label>
+                            <input type="radio" id="try-out" name="spel_type" value="try-out">
+                            <label for="try-out">Try-out May 19th</label>
                         </div>
                     </div>
                     <div class="buttons">
