--- a/aanmelden.html
+++ b/aanmelden.html
@@ -97,16 +97,16 @@
                         <input id="team_naam" name="team_naam" class="input team-name" placeholder="Teamnaam">
                     </div>
                     <div class="radio-label">
-                        Wil je liever ingedeeld worden in een hoge of lage klasse?
+                        Wil je inschrijven voor de competitie of voor de try-out?
                     </div>
                     <div class="form-input">
                         <div class="radio-button">
-                            <input type="radio" id="klasse_hoog" name="klasse" value="hoog">
-                            <label for="klasse_hoog">Hoge Klasse</label>
+                            <input type="radio" id="competitie" name="spel_type" value="competitie" checked>
+                            <label for="competitie">Competitie</label>
                         </div>
                         <div class="radio-button">
-                            <input type="radio" id="klasse_laag" name="klasse" value="laag" checked>
-                            <label for="klasse_laag">Lage Klasse</label>
+                            <input type="radio" id="try-out" name="spel_type" value="try-out">
+                            <label for="try-out">Try-out 19 mei</label>
                         </div>
                     </div>
                     <div class="buttons">
