change date try-out

--- a/aanmelden.html
+++ b/aanmelden.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="radio-button">
                             <input type="radio" id="try-out" name="spel_type" value="try-out">
-                            <label for="try-out">Try-out 19 mei</label>
+                            <label for="try-out">Try-out 2 juni</label>
                         </div>
                     </div>
                     <div class="buttons">
