--- a/en/index.html
+++ b/en/index.html
@@ -68,7 +68,7 @@
 
       <div class="intro-text-home">
         <h3>
-          Register <a href="subscribe">here </a> for the try-out on Friday, May 19th.
+          Register <a href="subscribe">here </a> for the try-out on Friday, June 2nd.
           We will start at 6:00 PM
         </h3>
       </div>
