--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -106,7 +106,7 @@
                         </div>
                         <div class="radio-button">
                             <input type="radio" id="try-out" name="spel_type" value="try-out">
-                            <label for="try-out">Try-out May 19th</label>
+                            <label for="try-out">Try-out June 2nd</label>
                         </div>
                     </div>
                     <div class="buttons">
