--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <div class="intro-text-home">
         <h3>
-          Meld je <a href="aanmelden">hier </a> aan voor de try-out op vrijdag 19 mei.
+          Meld je <a href="aanmelden">hier </a> aan voor de try-out op vrijdag 2 juni.
           Op deze dag beginnen we om 18:00u
         </h3>
       </div>
