--- a/aanmelden.html
+++ b/aanmelden.html
@@ -96,10 +96,10 @@
                         <label for="team_naam" class="label">Teamnaam (Optioneel)</label>
                         <input id="team_naam" name="team_naam" class="input team-name" placeholder="Teamnaam">
                     </div>
-                    <div class="radio-label">
+                    <!-- <div class="radio-label">
                         Wil je inschrijven voor de competitie of voor de try-out?
-                    </div>
-                    <div class="form-input">
+                    </div> -->
+                    <!-- <div class="form-input">
                         <div class="radio-button">
                             <input type="radio" id="competitie" name="spel_type" value="competitie" checked>
                             <label for="competitie">Competitie</label>
@@ -108,7 +108,7 @@
                             <input type="radio" id="try-out" name="spel_type" value="try-out">
                             <label for="try-out">Try-out 2 juni</label>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="buttons">
                         <button class="submit-button" form="versus-form" type="submit">
                             Verstuur aanmelding!
