--- a/en/subscribe.html
+++ b/en/subscribe.html
@@ -96,10 +96,10 @@
                         <label for="team_naam" class="label">Teamname (Optional)</label>
                         <input id="team_naam" name="team_naam" class="input team-name" placeholder="Teamnaam">
                     </div>
-                    <div class="radio-label">
+                    <!-- <div class="radio-label">
                         Do you want to register for the competition or for the try-out?
-                    </div>
-                    <div class="form-input">
+                    </div> -->
+                    <!-- <div class="form-input">
                         <div class="radio-button">
                             <input type="radio" id="competitie" name="spel_type" value="competitie" checked>
                             <label for="competitie">Competition</label>
@@ -108,7 +108,7 @@
                             <input type="radio" id="try-out" name="spel_type" value="try-out">
                             <label for="try-out">Try-out June 2nd</label>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="buttons">
                         <button class="submit-button" form="versus-form" type="submit">
                             Send subscription!
