--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 
       <div class="spacer-sm desktop"></div>
 
-      <div class="intro-text-home">
+      <!-- <div class="intro-text-home">
         <h3>
           Meld je <a href="aanmelden">hier </a> aan voor de try-out op vrijdag 2 juni.
           Op deze dag beginnen we om 18:00u
         </h3>
-      </div>
+      </div> -->
 
       <div class="intro-text-home">
         <h3>De enige 7 tegen 7 voetbalcompetitie van Haarlem</h3>
