--- a/en/index.html
+++ b/en/index.html
@@ -66,12 +66,12 @@
 
       <div class="spacer-sm desktop"></div>
 
-      <div class="intro-text-home">
+      <!-- <div class="intro-text-home">
         <h3>
           Register <a href="subscribe">here </a> for the try-out on Friday, June 2nd.
           We will start at 6:00 PM
         </h3>
-      </div>
+      </div> -->
 
       <div class="intro-text-home">
         <h3>The only 7 versus 7 soccer competition in Haarlem</h3>
